# rumble-chat-actor

./: 404.html  README.md  ___init__.py  __init__.py  common_commands.py  config.py  index.html  objects.inv  pyproject.toml  requirements.txt  rumble_chat_bot.py  rumblechat.py
action_properties/: index.html
explanation/: index.html
how-to-guides/: index.html
modules_ref/actions/: index.html
modules_ref/commands/: index.html
modules_ref/main/: index.html
modules_ref/misc/: index.html
modules_ref/static/: index.html
modules_ref/utils/: index.html
reference/: index.html
src/: mkdocs.yml
src/docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
src/docs/modules_ref/: actions.md  commands.md  main.md  misc.md  static.md  utils.md
src/rumchat_actor/: __init__.py  actions.py  commands.py  common_commands.py  localvars.py  misc.py  static.py  utils.py
tutorials/: index.html
