[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rumchat_actor"
version = "1.3.0"
keywords = ["rumble", "chat", "livestream", "bot"]
authors = [
  { name="Wilbur Jaywright", email="zargulthewizard@outlook.com" },
]
description = "Automatically interact with your Rumble livestream chats."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "browsermobproxy",
  "cocorum>=1.0.0",
  "moviepy",
  "requests",
  "selenium",
  "talkey",
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/thelabcat/rum-chat-actor"
Issues = "https://github.com/thelabcat/rumble-api-wrapper-py/issues"
