[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rumchat_actor"
version = "2.4.1"
keywords = ["rumble", "chat", "livestream", "bot"]
authors = [
  { name="Wilbur Jaywright", email="zargulthewizard@outlook.com" },
]
description = "Automatically interact with your Rumble livestream chats."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "browsermob-proxy",
  "cocorum",
#  "js2py",
  "moviepy",
  "requests",
  "selenium",
  "talkey",
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/thelabcat/rum-chat-actor"
Issues = "https://github.com/thelabcat/rumble-api-wrapper-py/issues"
