[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rumchat_actor"
version = "3.2.0"
keywords = ["rumble", "chat", "livestream", "bot"]
authors = [
  { name="Wilbur Jaywright", email="zargulthewizard@outlook.com" },
]
description = "Automatically interact with your Rumble livestream chats."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "cocorum",
  "moviepy",
  "pyautogui",
  "requests",
  "selenium",
  "standard-pipes", #Dead battery dependency of Talkey as of Python 3.13.0
  "talkey",
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/thelabcat/rum-chat-actor"
Issues = "https://github.com/thelabcat/rumble-api-wrapper-py/issues"
